<resources>
    <string name="app_name">MyEmergencyBot</string>
    <string name="help">Вызвать помощь</string>
    <string name="set">set</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings">Настройки</string>
    <string name="Contacts">Контакты</string>
    <string name="Back">Back</string>
    <string name="Message">Сообщение</string>
    <string name="Button">Кнопка</string>
    <string name="title_activity_contacts">ContactsActivity</string>
    <string name="title_activity_choose_connect">ChooseConnectActivity</string>
    <string name="Nomber">Номер Телефона</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_new_contact">newContactActivity</string>
    <string name="title_activity_button_settings">ButtonSettingsActivity</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="title_activity_new_message">NewMessageActivity</string>
    <string name="AddMessage">Добавить</string>
    <string name="Create">Создать</string>
    <string name="New_contact">Новый контакт</string>
</resources>
